feat: added swagger implementation
